--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		LumberCalc
 	</title>
 	<link rel="stylesheet" href="styles.css">
+	<link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 <body>
 	<div class="main_container">
